--- a/examples/gds_map.yaml
+++ b/examples/gds_map.yaml
@@ -15,5 +15,25 @@ layer_map:
   !!python/tuple [RX, phot]: [12, 0]
   !!python/tuple [PC, phot]: [13, 0]
   !!python/tuple [RX, port]: [12, 100]
+  !!python/tuple [Clad, phot]: [14, 0]
+  !!python/tuple [BOX, phot]: [15, 0]
+
+# TODO: Add properties for other layers
+lumerical_prop_map:
+  !!python/tuple [Si, phot]:
+    material: 'Si (Silicon) - Palik'
+    z_min: 0
+    z_max: .200
+    alpha: 1
+  !!python/tuple [BOX, phot]:
+    material: 'SiO2 (Glass) - Palik'
+    z_min: !!python/float -1
+    z_max: 0
+    alpha: 1
+  !!python/tuple [Clad, phot]:
+    material: 'SiO2 (Glass) - Palik'
+    z_min: 0
+    z_max: !!python/float 2
+    alpha: .1
 
 
