--- a/examples/specs/waveguide_specs.yaml
+++ b/examples/specs/waveguide_specs.yaml
@@ -1,14 +1,19 @@
-lib_name: 'waveguide_lib'
-cell_name: 'waveguide_cell'
+# A sample specification file to generate a Waveguide project
 
-# Dummy rounting grid needed for TemplateDB
-routing_grid:
-  layers: {}
-  spaces: {}
-  widths: {}
-  bot_dir: 'x'
+# Directory Locations
+project_dir: ~/Documents/Photonics_Data/Generated_Waveguide  # Top level directory for the project
+scripts: scripts  # subdirectory of project_dir where generated script files are placed
+data: data  # subdirectory of project_dir where generated data is placed
+layermap: ./tech/gds_map.yaml  # file containing technology information
 
-params:
+# Output Settings
+lsf_filename: SingleModeWaveguide.lsf
+gds_filename: Output
+
+# Generator Params
+layout_package: 'waveguide'  # Module that contains the layout generator class
+layout_class: 'WaveguideConnectTest'  # Layout generator class name
+layout_params:  # Place parameters to be passed to the generator class under here
   width: 0.5
   length: 10
 
@@ -18,3 +23,12 @@ params:
   wg2:
     width: 1
     length: 10
+
+# Cadence related parameters
+impl_lib: 'waveguide_lib'
+impl_cell: 'waveguide_cell'
+
+# Vestigial parameters required by BAG class
+sweep_params:
+  intent: [standard]
+root_dir: 'data'
