Updates to photonics ports
1) Updated ports to include diamond shape in produced GDS for designer convenience
2) Updated some syntax of port related functions
3) Added extract_photonic_ports method to bring ports from instance into top-level cell
4) Added test scripts to ensure port extraction functions

--- a/examples/specs/waveguide_specs.yaml
+++ b/examples/specs/waveguide_specs.yaml
@@ -12,7 +12,7 @@ gds_filename: Output
 
 # Generator Params
 layout_package: 'waveguide'  # Module that contains the layout generator class
-layout_class: 'WaveguideConnectTest'  # Layout generator class name
+layout_class: 'PortTest'  # Layout generator class name
 layout_params:  # Place parameters to be passed to the generator class under here
   width: 0.5
   length: 10
