Modifying filenames to be consistent. New classes/files named PhotonicXXX not PhotonicsXXX

--- a/examples/specs/waveguide_specs.yaml
+++ b/examples/specs/waveguide_specs.yaml
@@ -11,7 +11,7 @@ lsf_filename: SingleModeWaveguide.lsf
 gds_filename: Output
 
 # Generator Params
-layout_package: 'waveguide'  # Module that contains the layout generator class
+layout_package: 'waveguide_test'  # Module that contains the layout generator class
 layout_class: 'PortTest'  # Layout generator class name
 layout_params:  # Place parameters to be passed to the generator class under here
   width: 0.5
