Added lumerical polygon support, fixed unit issues

--- a/examples/specs/LumericalPolygon_spec_file.yaml
+++ b/examples/specs/LumericalPolygon_spec_file.yaml
@@ -2,18 +2,18 @@
 # A sample specification file to generate a SingleModeWaveguide project
 
 # Directory Locations
-project_dir: ~/Photonics_Data/Generated_Waveguide  # Top level directory for the project
+project_dir: ~/Photonics_Data/Generated_Poly  # Top level directory for the project
 scripts: scripts  # subdirectory of project_dir where generated script files are placed
 data: data  # subdirectory of project_dir where generated data is placed
 layermap: ./tech/gds_map.yaml  # file containing technology information
 
 # Output Settings
-lsf_filename: SingleModeWaveguide.lsf
+lsf_filename: Polygon.lsf
 gds_filename: Output
 
 # Generator Params
-layout_package: 'LumericalWaveguide'  # Module that contains the layout generator class
-layout_class: 'SingleModeWaveguide'  # Layout generator class name
+layout_package: 'LumericalPolygon'  # Module that contains the layout generator class
+layout_class: 'TestPolygon'  # Layout generator class name
 layout_params:  # Place parameters to be passed to the generator class under here
 
 # Cadence related parameters
