--- a/examples/specs/waveguide_specs.yaml
+++ b/examples/specs/waveguide_specs.yaml
@@ -2,9 +2,7 @@
 
 # Directory Locations
 project_dir: ~/Documents/Photonics_Data/Generated_Waveguide  # Top level directory for the project
-scripts: scripts  # subdirectory of project_dir where generated script files are placed
-data: data  # subdirectory of project_dir where generated data is placed
-layermap: ./tech/gds_map.yaml  # file containing technology information
+#layermap: ./tech/gds_map.yaml  # file containing technology information
 
 # Output Settings
 lsf_filename: SingleModeWaveguide.lsf
