Adding new dataprep code.
1) Moved Ruocheng's code into the BPG folder
2) Modified dataprep code in Ruocheng's files and in PhotonicTemplateDB
3) added test files for dataprep including sample dataprep sequence and new layermap

--- a/examples/tech/gds_map.yaml
+++ b/examples/tech/gds_map.yaml
@@ -1,9 +1,14 @@
 via_info:
 
 layer_map:
-  !!python/tuple [Si, phot]: [2, 0]
-  !!python/tuple [Si, port]: [2, 100]
-  !!python/tuple [Poly, phot]: [3, 0]
+  !!python/tuple [SI, phot]: [2, 0]
+  !!python/tuple [SI, port]: [2, 100]
+  !!python/tuple [SI, drawing]: [2, 50]
+  !!python/tuple [SI, exclude]: [2, 10]
+  !!python/tuple [POLY, phot]: [4, 0]
+  !!python/tuple [POLY, port]: [4, 100]
+  !!python/tuple [POLY, drawing]: [4, 50]
+  !!python/tuple [POLY, exclude]: [4, 10]
   !!python/tuple [CA, phot]: [4, 0]
   !!python/tuple [M1, phot]: [5, 0]
   !!python/tuple [V1, phot]: [6, 0]
