--- a/tests/specs/add_rect_specs.yaml
+++ b/tests/specs/add_rect_specs.yaml
@@ -5,6 +5,9 @@ project_dir: ~/Documents/Photonics_Data/add_rect  # Top level directory for the 
 scripts: scripts  # subdirectory of project_dir where generated script files are placed
 data: data  # subdirectory of project_dir where generated data is placed
 layermap: ./tech/gds_map.yaml  # file containing technology information
+#layermap: /tools/projects/ruocheng_wang/Photonics_Dev/BPG/tests/tech/gds_map.yaml  # file containing technology information
+
+
 
 # Output Settings
 lsf_filename: add_rect.lsf
