--- a/examples/tech/dataprep.yaml
+++ b/examples/tech/dataprep.yaml
@@ -6,11 +6,11 @@
     - !!python/tuple ['SI2', 'phot']
   lpp_ops:
     - !!python/tuple ['SI', 'drawing', 'add', 0.0]
-    - !!python/tuple ['SI', 'exclude', 'rad', 2.0]
-    - !!python/tuple ['SI', 'exclude', 'add', 1.0]
+    # - !!python/tuple ['SI', 'exclude', 'rad', 2.0]
+    - !!python/tuple ['SI', 'test1', 'add', 1.0]
 -
   lpp_in:
     - !!python/tuple ['POLY', 'phot']
   lpp_ops:
-    - !!python/tuple ['POLY', 'exclude', 'rad', 20.0]
+    - !!python/tuple ['POLY', 'exclude', 'rad', 5.0]
 
