--- a/examples/tech/dataprep.yaml
+++ b/examples/tech/dataprep.yaml
@@ -1,16 +1,23 @@
 
 
--
-  lpp_in:
-    - !!python/tuple ['SI', 'phot']
-    - !!python/tuple ['SI2', 'phot']
-  lpp_ops:
-    - !!python/tuple ['SI', 'drawing', 'add', 0.0]
-    # - !!python/tuple ['SI', 'exclude', 'rad', 2.0]
-    - !!python/tuple ['SI', 'test1', 'add', 1.0]
--
-  lpp_in:
-    - !!python/tuple ['POLY', 'phot']
-  lpp_ops:
-    - !!python/tuple ['POLY', 'exclude', 'rad', 5.0]
+
+dataprep_groups:
+  - lpp_in:
+      - !!python/tuple ['SI', 'phot']
+      - !!python/tuple ['SI2', 'phot']
+    lpp_ops:
+      - !!python/tuple ['SI', 'drawing', 'add', 0.0]
+      - !!python/tuple ['SI', 'exclude', 'rad', 2.0]
+      - !!python/tuple ['SI', 'test1', 'add', 1.0]
+      - !!python/tuple ['SI', 'test2', 'add', 0.1]
+  - lpp_in:
+      - !!python/tuple ['POLY', 'phot']
+    lpp_ops:
+      - !!python/tuple ['POLY', 'exclude', 'rad', 5.0]
+
+over_under_under_over:
+  - !!python/tuple ['SI', 'drawing']
+  - !!python/tuple ['SI', 'test1']
+  - !!python/tuple ['SI', 'test2']
+
 
