--- a/tests/specs/port_extraction_specs.yaml
+++ b/tests/specs/port_extraction_specs.yaml
@@ -3,23 +3,17 @@
 
 # Directory Locations
 # Top level directory for the project
-project_dir: ~/Documents/Photonics_Data/port_extraction
-# subdirectory of project_dir where generated script files are placed
-scripts: scripts
-# subdirectory of project_dir where generated data is placed
-data: data
-# file containing technology information
-layermap: ./tech/gds_map.yaml
+project_name: port_extraction
 
 
 # Output Settings
-lsf_filename: add_rect.lsf
+lsf_filename: port_extraction.lsf
 gds_filename: Output
 
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'port_extraction'
+layout_package: 'tests.port_extraction'
 # Layout generator class name
 layout_class: 'PortExtraction'
 
