Improving dataprep functions.
Added cleanup function to ensure proper grid rounding.
Cleaned up code by replacing offset(0) with cleanup.

Explicitly set precision of offset operation to be better than grid size (now by 10x), because we arent sure what clipper is doing with precision.
So do all ops with very high precision, then round back to the grid after each step (in numpy)

--- a/examples/tech/dataprep.yaml
+++ b/examples/tech/dataprep.yaml
@@ -12,6 +12,7 @@ dataprep_groups:
       - !!python/tuple ['SI', 'test2', 'add', 0.1]
       - !!python/tuple ['SI', 'test3', 'add', 0.01]
       - !!python/tuple ['SI', 'test4', 'add', 0.005]
+      - !!python/tuple ['SI', 'test5', 'add', 2.0]
 
   - lpp_in:
       - !!python/tuple ['POLY', 'phot']
@@ -19,8 +20,8 @@ dataprep_groups:
       - !!python/tuple ['POLY', 'exclude', 'rad', 5.0]
 
 over_under_under_over:
-  - !!python/tuple ['SI', 'drawing']
+#  - !!python/tuple ['SI', 'drawing']
   - !!python/tuple ['SI', 'test2']
-  - !!python/tuple ['SI', 'test1']
+#  - !!python/tuple ['SI', 'test1']
 
 
