--- a/examples/tech/gds_map.yaml
+++ b/examples/tech/gds_map.yaml
@@ -26,6 +26,7 @@ layer_map:
   !!python/tuple [RX, port]: [12, 100]
   !!python/tuple [CLAD, phot]: [14, 0]
   !!python/tuple [BOX, phot]: [15, 0]
+  !!python/tuple [SIM, phot]: [16, 0]
 
 # TODO: Complete implementation of gds_invalid_layers
 gds_invalid_layers:
