--- a/examples/tech/dataprep.yaml
+++ b/examples/tech/dataprep.yaml
@@ -8,11 +8,14 @@ dataprep_groups:
     lpp_ops:
       - !!python/tuple ['SI', 'drawing', 'add', 0.0]
       - !!python/tuple ['SI', 'exclude', 'rad', 2.0]
-      - !!python/tuple ['SI', 'test1', 'add', 1.0]
-      - !!python/tuple ['SI', 'test2', 'add', 0.1]
-      - !!python/tuple ['SI', 'test3', 'add', 0.01]
-      - !!python/tuple ['SI', 'test4', 'add', 0.005]
-      - !!python/tuple ['SI', 'test5', 'add', 2.0]
+#      - !!python/tuple ['SI', 'test1', 'add', 1.0]
+#      - !!python/tuple ['SI', 'test2', 'add', 0.1]
+#      - !!python/tuple ['SI', 'test3', 'add', 0.01]
+#      - !!python/tuple ['SI', 'test4', 'add', 0.005]
+#      - !!python/tuple ['SI', 'test3', 'add', 2.0]
+#      - !!python/tuple ['SI', 'test4', 'add', 4.0]
+      - !!python/tuple ['SI', 'test5', 'ouo', 10.0]
+      - !!python/tuple ['SI', 'test4', 'rouo', 10.0]
 
   - lpp_in:
       - !!python/tuple ['POLY', 'phot']
