adding tech info

--- a/tests/specs/port_extraction_specs.yaml
+++ b/tests/specs/port_extraction_specs.yaml
@@ -13,7 +13,7 @@ gds_filename: Output
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.port_extraction'
+layout_package: 'port_extraction'
 # Layout generator class name
 layout_class: 'PortExtraction'
 
