--- a/examples/specs/WaveguideTB.yaml
+++ b/examples/specs/WaveguideTB.yaml
@@ -10,12 +10,12 @@ layout_class: 'SingleModeWaveguide'
 
 # These parameters are passed to the layout class
 layout_params:
-  - width: 1.0
-    length: 10.0
-  - width: 1.1
-    length: 10.0
-  - width: 1.2
-    length: 10.0
+  width: 1.0
+  length: 10.0
+#  - width: 1.1
+#    length: 10.0
+#  - width: 1.2
+#    length: 10.0
 
 #------------------
 #   TB Config
