Fixed issue with layout parameter list in PLM.generate_gds()

--- a/tests/specs/add_rect_specs.yaml
+++ b/tests/specs/add_rect_specs.yaml
@@ -4,7 +4,7 @@
 project_name: add_rect
 
 # Output Settings
-lsf_filename: add_rect.lsf
+lsf_filename: add_rect
 gds_filename: Output
 
 # Generator Params
