--- a/tests/specs/flatten_test_specs.yaml
+++ b/tests/specs/flatten_test_specs.yaml
@@ -2,11 +2,11 @@
 
 # Directory Locations
 # Top level directory for the project
-project_name: flatten
+project_name: bpg_test_suite
 
 # Output Settings
-lsf_filename: flatten.lsf
-gds_filename: Output
+lsf_filename: flatten
+gds_filename: flatten
 
 # Cadence related parameters
 impl_lib: 'flatten_lib'
@@ -14,7 +14,7 @@ impl_cell: 'flatten_cell'
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.flatten_test'
+layout_package: 'tests.test_flatten'
 # Layout generator class name
 layout_class: 'TopLevel'
 
