--- a/tests/specs/path_test_specs.yaml
+++ b/tests/specs/path_test_specs.yaml
@@ -1,15 +1,15 @@
 # A sample specification file to generate a Waveguide project
 
 # Directory Locations
-project_name: path
+project_name: bpg_test_suite
 
 # Output Settings
-lsf_filename: path.lsf
-gds_filename: Output
+lsf_filename: path
+gds_filename: path
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.path_test'
+layout_package: 'tests.test_path'
 layout_class: 'Path'  # Layout generator class name
 
 layout_params:  # Place parameters to be passed to the generator class under here
