Fixed use_dataprep bug in example scripts

--- a/examples/specs/WaveguideTB.yaml
+++ b/examples/specs/WaveguideTB.yaml
@@ -1,6 +1,6 @@
-project_name: Generated_Waveguide
+project_name: Waveguide
 lsf_filename: SingleModeWaveguide
-gds_filename: Output
+gds_filename: SingleModeWaveguide
 
 #------------------
 #   Layout Config
