Fixed lumerical_tb so that self.params contains tb_params for testbench classes

--- a/examples/specs/WaveguideTB.yaml
+++ b/examples/specs/WaveguideTB.yaml
@@ -21,6 +21,7 @@ tb_class: 'WaveguideFDE'
 
 # These additional parameters are passed to the testbench class
 tb_params:
+  test_param: 10
 
 #------------------
 #   Cadence Config
