1) Adding tech information for a dummy process 2) Adding the photonic tech info for a dummy process 3) Converted dataprep to its own class to help separate it from templateDB 4) Dataprep producing output shapes (1st pass appear correct) according to the tech-based dataprep parameters and flow

--- a/examples/specs/LumericalPolygon_spec_file.yaml
+++ b/examples/specs/LumericalPolygon_spec_file.yaml
@@ -3,8 +3,10 @@
 
 # Directory Locations
 project_name: Generated_Poly
-#project_dir: ~/Photonics_Data/Generated_Poly  # If you would like to dump outputs to a specific location, enter it here
-#layermap: ./tech/gds_map.yaml  # If you would like to override the layermap from bag_config.yaml, enter it here
+# If you would like to dump outputs to a specific location, enter it here
+# project_dir: ~/Photonics_Data/Generated_Poly
+# If you would like to override the layermap from bag_config.yaml, enter it here
+# layermap: ${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/gds_map.yaml
 
 # Output Settings
 lsf_filename: Polygon.lsf
