Completed and tested dataprep ignore and bypass functionality!

--- a/examples/tech/BPG_tech_files/dataprep_routine.yaml
+++ b/examples/tech/BPG_tech_files/dataprep_routine.yaml
@@ -21,12 +21,12 @@ over_under_under_over:
   - !!python/tuple ['SI', 'drawing']
 
 dataprep_ignore_list:
-  - !!python/tuple ['SI', 'port']
-  - !!python/tuple ['POLY', 'port']
-  - !!python/tuple ['SI', 'phot']
+  -
+#  - !!python/tuple ['SI', 'phot']
 
 dataprep_bypass_list:
-  - !!python/tuple ['SI', 'phot']
+  - !!python/tuple ['SI', 'port']
+  - !!python/tuple ['POLY', 'port']
 
 manh_size_per_layer:
 #  SI: 0.010
