Adding manh dataprep operation; fix tech file path bug
1) Do not manhattanize shapes by default upon start of dataprep
2) Add manh dataprep operation to manhattanize shapes on a layer
3) Restructure yaml code to have lpp / op entries be dicionaries
4) Provide better error checking for dataprep entries
5) Fix bug where path to tech files specified in the spec file did not actually do anything.

--- a/tests/specs/dataprep_routine.yaml
+++ b/tests/specs/dataprep_routine.yaml
@@ -13,7 +13,15 @@ dataprep_groups:
   - lpp_in:
       - {lpp: ['SI', 'phot']}
     lpp_ops:
-      - {lpp: ['SI', 'phot'], operation: 'manh', amount: 0.001}
+      - {lpp: ['V1', 'drawing'], operation: 'manh', amount: 0.001}
+  - lpp_in:
+      - {lpp: ['SI', 'phot']}
+    lpp_ops:
+      - {lpp: ['V2', 'drawing'], operation: 'add', amount: 0}
+  - lpp_in:
+      - {lpp: ['V2', 'drawing']}
+    lpp_ops:
+      - {operation: 'manh'}
   - lpp_in:
       - {lpp: ['POLY', 'phot']}
     lpp_ops:
@@ -23,15 +31,8 @@ dataprep_groups:
 over_under_under_over:
   - {lpp: ['SI', 'drawing']}
 
-dataprep_ignore_list:
-  -
-#  - !!python/tuple ['SI', 'phot']
-
-dataprep_bypass_list:
-  - !!python/tuple ['SI', 'port']
-  - !!python/tuple ['POLY', 'port']
-
 manh_size_per_layer:
+  V2: 0.05
 #  SI: 0.010
 #  POLY: 0.010
 #  M1: 0.05
