--- a/tests/specs/dataprep_debug_specs.yaml
+++ b/tests/specs/dataprep_debug_specs.yaml
@@ -7,7 +7,7 @@ project_name: bpg_test_suite
 
 # file containing technology information
 # layermap: BPG/examples/tech/BPG_tech_files/gds_map.yaml
-# dataprep: 'BPG/examples/tech/BPG_tech_files/dataprep_routine.yaml'
+dataprep: 'BPG/tests/specs/dataprep_routine.yaml'
 
 # Output Settings
 lsf_filename: dataprep_debug
