Adding dataprep checker to verify validity of dataprep flow before running.
Added to catch errors before a long dataprep flow is started.

--- a/examples/tech/BPG_tech_files/dataprep_routine.yaml
+++ b/examples/tech/BPG_tech_files/dataprep_routine.yaml
@@ -39,11 +39,11 @@ over_under_under_over:
 
 #dataprep_ignore_list:
 #  -
-#  - !!python/tuple ['SI', 'phot']
+#  - {lpp: ['SI', 'phot']}
 
 dataprep_bypass_list:
-  - !!python/tuple ['SI', 'port']
-  - !!python/tuple ['POLY', 'port']
+  - {lpp: ['SI', 'port']}
+  - {lpp: ['POLY', 'port']}
 
 manh_size_per_layer:
 #  SI: 0.010
