Added layermap to spec file
Force BPG to use default layermap during construction in case users' tech specific layermap does not support the same layers in the unit_test

--- a/tests/specs/logger_specs.yaml
+++ b/tests/specs/logger_specs.yaml
@@ -3,6 +3,7 @@
 # Directory Locations
 # Top level directory for the project
 project_name: bpg_test_suite
+layermap: 'BPG/examples/tech/BPG_tech_files/gds_map.yaml'
 
 logfile: 'gen_libs/bpg_test_suite/custom_log_name_test.txt'
 
