--- a/tests/specs/path_test_specs.yaml
+++ b/tests/specs/path_test_specs.yaml
@@ -2,6 +2,7 @@
 
 # Directory Locations
 project_name: bpg_test_suite
+layermap: 'BPG/examples/tech/BPG_tech_files/gds_map.yaml'
 
 # Output Settings
 lsf_filename: path
