--- a/tests/specs/logger_specs_no_logfile.yaml
+++ b/tests/specs/logger_specs_no_logfile.yaml
@@ -3,6 +3,7 @@
 # Directory Locations
 # Top level directory for the project
 project_name: bpg_test_suite
+layermap: 'BPG/examples/tech/BPG_tech_files/gds_map.yaml'
 
 # Output Settings
 lsf_filename: logger
